- Support for random unit recruitment via #firstshape and #montag. Basically support for foul spawns.
- Fix for certain sacred limiting tags not working in wings (especially Daeva ones)
- Tweaks to sacred stat generation
- Ability to reduce average power of certain units when generated sacred or sacred-type elite
- Scouts are much more likely to have survival skills


Content
----------------------------------------------------------
- Updated weapon and armor database to version 4.23. Thanks to LarzM for Dom4inspector!
- Mounted Atlantians
- Demographic themes for austral humans
- Dog, crocodile, mid-sized mantis, and swan mounts for pygmies
- Removed #primaryraceonly from pygmies
- Added pygmy mages and mounted pygmy mages
- Added advanced pygmy infantry/ranged poses for pygmy-heavy demographic themes
- Renamed generic humans "boreal humans" and reduced their basechance to the same as other regional variants; conceptually, they're being treated as a lumping-together of Man and Ulm
- Added "blacksteel" theme and accompanying poses/gear to boreal humans
- Added updated Mannish archer graphics for all boreal ranged poses
- Giant poses for elite/sacred ichtyids
- Basic implementation of assorted ogres as a distinct race (no accompanying giants for now)
- Reclimit for Daevas. May be too harsh.
- Tweaks power of sacreds of certain races
- Some racial base price adjustments based on 4.25 changes
- Swan mounts for fae hoburgs and hoburgbred
- Swan chariots for fae hoburgs, hoburgbred, and pygmies

0.6.10 (27th of January 2016)
----------------------------------------------------------

Code
----------------------------------------------------------
- Fixed an uncommon bug with hero mage generation

Content
----------------------------------------------------------
- "imperial" Dynastic human social theme added
- "oriental" Primate regional theme added
- "terrestrial" Primate demographic theme renamed "lowland"