@@ -8,7 +8,8 @@ Code
 - Tweaks to sacred stat generation
 - Ability to reduce average power of certain units when generated sacred or sacred-type elite
 - Scouts are much more likely to have survival skills
-
+- Performance tweaks (that are more than easily counteracted by how heavy foul spawn nations are to generate)
+- Basic commandline options for people who want to run an endless loop of NationGen nation batches to find their dream nation or something equally silly. See the documentation.
 
 Content
 ----------------------------------------------------------
